--- a/frontend/src/styles/Dashboard/YourAccount.css
+++ b/frontend/src/styles/Dashboard/YourAccount.css
@@ -24,16 +24,17 @@
   font-size: 16px;
   color: white;
   margin: 0px;
-
 }
 
 .acc-card.active {
   background-color: #3c1053;
   transform: scale(1.08);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease,
+    color 0.3s ease;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
-
 
 .acc-card:hover {
   background-color: #6a467e;
@@ -46,8 +47,7 @@
 }
 
 @media screen and (max-width: 1037px) {
-
   .acc-card {
-    padding: 30px
+    padding: 30px;
   }
 }
