--- a/frontend/src/styles/Home/Navbar.css
+++ b/frontend/src/styles/Home/Navbar.css
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
 }
-.logo{
+.logo {
   max-width: 150px;
 }
 
@@ -57,7 +57,6 @@
   margin-right: 30px;
 }
 
-
 .login-button,
 .get-started-button {
   background-color: #f2eaf9;
@@ -67,7 +66,9 @@
   margin-left: 20px;
   cursor: pointer;
   border-radius: 5px;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
   text-decoration: none;
   text-align: center;
 }
@@ -97,7 +98,7 @@
   .navbar-right {
     display: none;
     flex-direction: column;
-    position:relative;
+    position: relative;
     right: 0;
     background-color: #5a287d;
     width: 100%;
@@ -106,13 +107,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    top:10px;
+    top: 10px;
   }
 
   .navbar-menu {
     flex-direction: column;
     align-items: center;
-    margin-right: 62px; 
+    margin-right: 62px;
   }
 
   .navbar-menu li {
@@ -129,12 +130,12 @@
     font-size: 15px;
     text-align: center;
   }
-  
+
   .get-started-button {
     margin: 10px 20px;
     font-size: 15px;
   }
-  
+
   .hamburger-menu {
     display: flex;
 
@@ -149,7 +150,7 @@
   .hamburger-menu.active .bar:nth-child(2) {
     opacity: 0;
   }
-  
+
   .hamburger-menu.active .bar:nth-child(3) {
     transform: rotate(50deg) translate(-6.5px, -6px);
   }
