--- a/frontend/src/styles/Home/Services.css
+++ b/frontend/src/styles/Home/Services.css
@@ -1,12 +1,12 @@
-.container{
+.container {
   display: flex;
   justify-content: space-between;
 }
-.header{
+.header {
   font-size: 50px;
   text-align: center;
   color: #5a287d;
-  font-family: "knilebold",sans-serif;
+  font-family: "knilebold", sans-serif;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -31,7 +31,8 @@
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -42,7 +43,7 @@
   display: flex;
   background-color: #000;
   color: #f2eaf9;
-  text-align:center;
+  text-align: center;
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -61,34 +62,34 @@
   transform: rotateY(180deg);
 }
 
-.card-img-1{
-  background-image: url('https://www.esds.co.in/home-images/digital-banking/iotBnk.jpg');
+.card-img-1 {
+  background-image: url("https://www.esds.co.in/home-images/digital-banking/iotBnk.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);
+  box-shadow: inset 0 0 0 2000px rgb(0, 0, 0, 0.6);
 }
 
-.card-img-2{
-  background-image: url('https://www.miles33.com/resizer/960/-1/true/1429081697483.jpeg--multiple_currencies.jpeg');
+.card-img-2 {
+  background-image: url("https://www.miles33.com/resizer/960/-1/true/1429081697483.jpeg--multiple_currencies.jpeg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);  
+  box-shadow: inset 0 0 0 2000px rgb(0, 0, 0, 0.6);
 }
 
-.card-img-3{
-  background-image: url('https://elogic.co/wp-content/uploads/2021/08/cybersecurity-lock.jpg');
+.card-img-3 {
+  background-image: url("https://elogic.co/wp-content/uploads/2021/08/cybersecurity-lock.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);
+  box-shadow: inset 0 0 0 2000px rgb(0, 0, 0, 0.6);
 }
 
-.card-img-back{
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSexzHnBWZDAQiuIYv-zluWzjchqTt08vLYDpNzExO7GbdG3Ibku5E7H5_9mldGfrAIrg8');
+.card-img-back {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSexzHnBWZDAQiuIYv-zluWzjchqTt08vLYDpNzExO7GbdG3Ibku5E7H5_9mldGfrAIrg8");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);
-}  
+  box-shadow: inset 0 0 0 2000px rgb(0, 0, 0, 0.6);
+}
 
 @media screen and (max-width: 768px) {
   .container {
